media/plex/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
  namespace: plex
  labels:
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: plex
      app.kubernetes.io/instance: plex
  serviceName: ""
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plex
        app.kubernetes.io/instance: plex
    spec:
      containers:
      - name: plex
        image: docker.io/plexinc/pms-docker:1.20.3.3483-211702a9f
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: data
        - mountPath: /transcode
          name: transcode
        ports:
        - name: http
          containerPort: 32400
        livenessProbe:
          httpGet:
            path: /identity
            port: http
          initialDelaySeconds: 100
        readinessProbe:
          httpGet:
            path: /identity
            port: http
      terminationGracePeriodSeconds: 60
      volumes:
      - name: transcode
        emptyDir: {}
      - name: data
        persistentVolumeClaim:
          claimName: plex-data
      - name: config
        persistentVolumeClaim:
          claimName: plex-config
