media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
  labels:
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: plex
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 32400
    targetPort: http
    name: http
  selector:
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: plex
