media/plex/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: plex
  namespace: plex
  labels:
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: plex
spec:
  tls:
  - hosts:
    - "plex.srueg.ch"
  rules:
  - host: "plex.srueg.ch"
    http:
      paths:
      - path: /
        backend:
          serviceName: plex
          servicePort: http
